[gd_scene load_steps=25 format=2]

[ext_resource path="res://Pics/Mapbuilding/HUB-värld/grass.png" type="Texture" id=1]
[ext_resource path="res://Pics/Mapbuilding/HUB-värld/Sprite-0004.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Worldbuilding/Leaves_spawn.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI/Camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://Pics/Mapbuilding/Generellt/gate_svart.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Skelett.tscn" type="PackedScene" id=6]
[ext_resource path="res://Pics/Cutscenes/coffin_open_1.png" type="Texture" id=7]
[ext_resource path="res://Pics/Cutscenes/coffin_lock_1.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Main/Spawn.gd" type="Script" id=9]
[ext_resource path="res://Pics/Skelett/briefcase.png" type="Texture" id=10]
[ext_resource path="res://Pics/Figurer/uggla.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 180.986, 76.9777 )

[sub_resource type="TileSet" id=1]
0/name = "grass.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 128, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 256, 256, 256, 256, 224, 256, 160, 224, 96, 224, 32, 256, 0, 256, 0, 0, 256, 0, 256, 256, 256, 256 )

[sub_resource type="TileSet" id=2]
0/name = "Sprite-0004.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 1152, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Sprite-0004.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 1152, 128, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 4 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Sprite-0004.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 1664, 0, 256, 256 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 5 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 65, 73.5 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 11 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 11 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 11 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 11 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 57.5, 58.5 )

[node name="Spawn" type="Node2D"]
script = ExtResource( 9 )

[node name="gate_Spawn" type="Area2D" parent="."]
position = Vector2( 779, 667 )
collision_layer = 8
collision_mask = 8

[node name="Sprite" type="Sprite" parent="gate_Spawn"]
modulate = Color( 0.211765, 0.615686, 0.45098, 1 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="gate_Spawn"]
position = Vector2( 14, -69 )
scale = Vector2( 0.5, 0.7 )
shape = SubResource( 3 )

[node name="grass" type="TileMap" parent="."]
modulate = Color( 0.584314, 0.670588, 0.964706, 1 )
position = Vector2( -14, 24 )
tile_set = SubResource( 1 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0 )

[node name="väggar" type="TileMap" parent="."]
modulate = Color( 0.584314, 0.670588, 0.964706, 1 )
position = Vector2( 21, -55 )
tile_set = SubResource( 2 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( 327684, 0, 0, 327685, 2, 0, 327687, 0, 0, 393220, 1, 0, 393223, 1, 0 )

[node name="CoffinLock1" type="Sprite" parent="."]
position = Vector2( 860, 928 )
rotation = 0.511724
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="YSort" type="YSort" parent="."]

[node name="Skelett" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 774, 957 )
scale = Vector2( 0.5, 0.5 )

[node name="Coffin_open" type="StaticBody2D" parent="YSort"]
position = Vector2( 788, 812 )
collision_layer = 2

[node name="Coffin_open" type="Sprite" parent="YSort/Coffin_open"]
position = Vector2( 8, 84 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
offset = Vector2( 2, 334 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="YSort/Coffin_open"]
visible = false
position = Vector2( 8, 83 )
polygon = PoolVector2Array( 12, 49, 37, 82, 12, 169, -11, 169, -40, 83, -12, 49 )

[node name="Briefcase" type="Area2D" parent="YSort/Coffin_open"]
position = Vector2( 5, 165 )
collision_layer = 16
collision_mask = 16

[node name="Briefcase" type="Sprite" parent="YSort/Coffin_open/Briefcase"]
position = Vector2( 0, -15 )
scale = Vector2( 0.539062, 0.488281 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Coffin_open/Briefcase"]
position = Vector2( -1, -16 )
shape = SubResource( 13 )

[node name="Leaves_spawn" parent="." instance=ExtResource( 3 )]
position = Vector2( 786, 910 )

[node name="Camera2D" parent="." instance=ExtResource( 4 )]
position = Vector2( 786, 910 )
current = true

[node name="Positioner" type="Node2D" parent="."]

[node name="spawn_Main" type="Position2D" parent="Positioner"]
position = Vector2( 788, 718 )

[node name="spawn_Awoken" type="Position2D" parent="Positioner"]
position = Vector2( 783, 944 )

[node name="NPC_uggla" type="Area2D" parent="."]
position = Vector2( 870, 1016 )
collision_layer = 4
collision_mask = 4

[node name="AnimatedSprite" type="AnimatedSprite" parent="NPC_uggla"]
position = Vector2( -5, -184 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 11 )
frame = 4
speed_scale = 0.2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC_uggla"]
position = Vector2( -3.5, -183.5 )
shape = SubResource( 12 )

[connection signal="can_move" from="." to="YSort/Skelett" method="_on_Spawn_can_move"]
[connection signal="looking_around" from="." to="YSort/Skelett" method="_on_Spawn_looking_around"]
[connection signal="Interaction_detected" from="YSort/Skelett" to="." method="_on_Skelett_Interaction_detected"]
[connection signal="gate_detected" from="YSort/Skelett" to="." method="_on_Skelett_gate_detected"]
[connection signal="pick_up" from="Camera2D/CanvasLayer/Object_interation_menu" to="." method="_on_Object_interation_menu_pick_up"]

[editable path="Camera2D"]
